tests/ui/needless_return.stderr
error: unneeded return statement
  --> $DIR/needless_return.rs:11:5
   |
11 |     return true;
   |     ^^^^^^^^^^^^ help: remove `return` as shown: `true`
   |
note: lint level defined here
  --> $DIR/needless_return.rs:4:9
   |
4  | #![deny(needless_return)]
   |         ^^^^^^^^^^^^^^^

error: unneeded return statement
  --> $DIR/needless_return.rs:18:5
   |
18 |     return true
   |     ^^^^^^^^^^^ help: remove `return` as shown: `true`

error: unneeded return statement
  --> $DIR/needless_return.rs:26:9
   |
26 |         return true;
   |         ^^^^^^^^^^^^ help: remove `return` as shown: `true`

error: unneeded return statement
  --> $DIR/needless_return.rs:31:9
   |
31 |         return false;
   |         ^^^^^^^^^^^^^ help: remove `return` as shown: `false`

error: unneeded return statement
  --> $DIR/needless_return.rs:40:17
   |
40 |         true => return false,
   |                 ^^^^^^^^^^^^ help: remove `return` as shown: `false`

error: unneeded return statement
  --> $DIR/needless_return.rs:46:13
   |
46 |             return true;
   |             ^^^^^^^^^^^^ help: remove `return` as shown: `true`

error: unneeded return statement
  --> $DIR/needless_return.rs:56:9
   |
56 |         return true;
   |         ^^^^^^^^^^^^ help: remove `return` as shown: `true`

error: unneeded return statement
  --> $DIR/needless_return.rs:61:16
   |
61 |     let _ = || return true;
   |                ^^^^^^^^^^^ help: remove `return` as shown: `true`

error: aborting due to 8 previous errors

